--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1157,6 +1157,11 @@ a.more-link{
 					min-height: 571px;
 					.views-field-field-image{
 						min-height: 202px;//testing
+						img[alt="tools_default.png"]{
+							margin: 0 auto;
+							padding: 25px;
+							max-height: 250px;//testing
+						}
 					}
 					.tool-teaser-content-wrapper{
 						padding: 15px;
@@ -1861,6 +1866,7 @@ a.more-link{
 				margin: 30px 30px 0px 30px;
 				img{
 					max-height: 67px;
+					min-height: 67px;
 				}
 			}
 			.views-field-name-field{
@@ -2009,7 +2015,9 @@ div[id ^= "mini-panel-partner_in_country"]{
 					display: inline-block;
 					margin-right: 15px;
 					.field-name-field-collaborator-name{
-						
+						margin-bottom: 15px;
+						margin-top: 5px;
+						font-weight: bold;
 					}
 				}
 			}
@@ -2034,6 +2042,8 @@ div[id ^= "mini-panel-partner_in_country"]{
 
 			.panels-flexible-row-inside-first{
 				padding-top: 0px;
+				margin-left: 15px;
+    			margin-right: 15px;
 				.partner-image-container{
 					width: 100%;
 					img{
@@ -2064,9 +2074,13 @@ div[id ^= "mini-panel-partner_in_country"]{
 
 //partners and countries resources
 #quicktabs-container-view__country_partner_content__block, #quicktabs-container-view__country_partner_content__block_1{
-	background-color: @color-primary;
-	padding-bottom: 30px;
 	.quicktabs-tabpage {
+		.quicktabs-group-wrapper{
+			padding-bottom: 30px;
+		}
+		.quicktabs-group-wrapper:nth-child(odd){
+			background-color: @color-primary;
+		}
 		.group-practical_tool{
 			&:after{
     		    .section-icons("../images/icons/018.png");
@@ -2184,6 +2198,7 @@ div[id ^= "mini-panel-partner_in_country"]{
 			.related-partners-2 > div{
 				display: table;
 				border-collapse: collapse;
+				width: 100%;
 				& > .even, & > .odd{
 					&:first-child{
 						display: table-cell;
@@ -2398,6 +2413,9 @@ div[id ^= "mini-panel-partner_in_country"]{
 					margin-bottom: 20px;
 					padding-bottom: 5px;
 					font-family: "Oswald";
+					&:hover{
+						text-decoration: none !important;
+					}
 				}
 			}
 			.views-field-field-image{
