--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -299,11 +299,46 @@
 }
 /*END FOOTER*/
 
+/*GENERIC STYLES
+****************************************************************/
+.panels-flexible-row{
+	padding-bottom: 10px;
+}
+/*end generic styles*/
+
 /*HOME
 ****************************************************************/
 .front{
 	.panels-flexible-region-new-slider{
-
+		.views-field-title-field {
+		    position: inherit !important;
+		    width: 100% !important;
+		    background-color: @color-primary-dark;
+		    margin-top: -7px;
+		    padding-top: 25px;
+		    padding-left: 15px;
+		    padding-right: 15px;
+		    h2{
+		    	margin-top: 0px;
+    			margin-bottom: 0px;
+    			width: 720px;
+    			display: block;
+    			margin: 0 auto;
+		    }
+		}
+		.views-field-body {
+		    position: inherit !important;
+		    width: 100% !important;
+		    background-color: @color-primary-dark;
+		    padding-top: 25px;
+		    padding-bottom: 55px;
+		    padding-left: 15px;
+		    padding-right: 15px;
+		    .field-content{
+		    	width: 720px;
+		    	margin: 0 auto;
+		    }
+		}
 	}
 	.views-item-columns-container{
 		margin-bottom: 30px;
