--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -8092,7 +8092,7 @@ a.more-link:before {
   color: #ffffff;
 }
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-related-partners .node-partner h4 a {
-  font-size: 1.1em;
+  font-size: 1em;
   color: #ffffff;
   margin-top: 0px;
 }
@@ -8113,6 +8113,9 @@ a.more-link:before {
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-2 > div > .even:first-child,
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-2 > div > .odd:first-child {
   display: table-cell;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-2 > div > .even:first-child {
+  width: 50%;
 }
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-2 > div > .even:first-child .node-partner {
   margin-right: 10px;
@@ -8722,7 +8725,7 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
 }
 #quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .field-name-related-partners .node-partner h4 a,
 #quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .field-name-related-partners .node-partner h4 a {
-  font-size: 1.1em;
+  font-size: 1em;
   color: #ffffff;
   margin-top: 0px;
 }
@@ -9115,6 +9118,7 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
 .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .field-name-tools-see-more a.more-link {
   text-align: left;
   margin-top: 15px;
+  margin-left: 193px;
 }
 .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .field-name-tools-see-more a.show-less {
   text-align: right !important;
@@ -9141,31 +9145,40 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
   color: #10b2e4;
   margin-left: 10px;
 }
-.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .field-name-related-partners .node-partner {
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .field-name-related-partners .node-partner {
   background-color: #786586;
   padding: 15px;
   color: #ffffff;
-  margin-top: 20px;
 }
-.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .field-name-related-partners .node-partner h4 a {
-  font-size: 1.2em;
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .field-name-related-partners .node-partner h4 a {
+  font-size: 1em;
   color: #ffffff;
   margin-top: 0px;
 }
-.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .field-name-related-partners .node-partner .more-link {
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .field-name-related-partners .node-partner .more-link {
   color: #ffffff;
   text-align: left;
 }
-.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .related-partners-2 > div {
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .related-partners-1 > div {
+  margin-left: 208px;
+}
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .related-partners-2 .node-partner {
+  margin-left: 0px;
+}
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .related-partners-2 > div {
   display: table;
   border-collapse: collapse;
 }
-.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .related-partners-2 > div > .even:first-child,
-.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .related-partners-2 > div > .odd:first-child {
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .related-partners-2 > div > .even:first-child,
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .related-partners-2 > div > .odd:first-child {
   display: table-cell;
 }
-.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .related-partners-2 > div > .even:first-child {
-  border-right: 10px solid white;
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .related-partners-2 > div > .even:first-child {
+  width: 50%;
+}
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .related-partners-2 > div > .even:first-child .node-partner {
+  margin-right: 10px;
+  margin-left: 0px;
 }
 /*END Promotional materials*/
 /*NATIONAL SOCIAL PARTNERS
@@ -9667,13 +9680,16 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
   margin-top: 20px;
 }
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-related-partners .node-partner h4 a {
-  font-size: 1.2em;
+  font-size: 1em;
   color: #ffffff;
   margin-top: 0px;
 }
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .field-name-related-partners .node-partner .more-link {
   color: #ffffff;
   text-align: left;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 .node-partner {
+  margin-left: 0px;
 }
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 > div {
   display: table;
@@ -9684,7 +9700,11 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
   display: table-cell;
 }
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 > div > .even:first-child {
-  border-right: 10px solid white;
+  width: 50%;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 > div > .even:first-child .node-partner {
+  margin-right: 10px;
+  margin-left: 0px;
 }
 /*END SEARCH*/
 /*Pagination styles*/
