--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
@@ -22,7 +22,7 @@
 .menu-header{
 	#navbar{
 		.navbar-nav{
-			font-size: 0.9em;
+			font-size: 0.95em;
 			li.first.leaf{
 				top: 0px;
 				a{
@@ -32,7 +32,12 @@
 					}
 				}
 			}
+			&>li.first.leaf{
+				padding-right: 8px;
+    		}
 			li{
+				padding-left: 5px;
+    			padding-right: 5px;
 				.dropdown-menu{
 					top: 22px;
 					padding-top: 13px;
