--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -247,27 +247,35 @@
 		margin-bottom: 0px;
 		background-color: rgba(0,0,0,0) !important;
     	border: none;
+    	.navbar-collapse.collapse{
+    		padding-right: 0px;
+    		padding-left: 0px;
+    	}
     	.navbar-nav{
     		width: 100%;
-    		display: table;
+    		//display: table; //testing ie
     		margin-top: 15px;
+    		text-align: center;
     		li.last.leaf{
     			a{
     				border-right: none;
     			}
     		}
     		&>li.first.leaf{
-				top:-3px;
-				padding-right: 5px;
+				top:-1px;
+				padding-right: 15px;
     		}
     		li{
     			float: initial;
-    			display: table-cell;
+    			//display: table-cell; //testing ie
+    			display: inline-block;
     			//text-align: center;
     			padding: 0px;
     			color: @color-white;
     			text-align: center;
     			border-right: 2px solid @color-white;
+    			padding-left: 15px;
+    			padding-right: 15px;
     			&:last-child{
     				border-right: none;
     			}
