--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -224,10 +224,12 @@
     				padding-top: 0px;
    					border-radius: 0px;
 					display: block;
-					position: initial !important;
+					position: relative !important;
 					float: none;
 					box-shadow: 0 6px 12px rgba(0, 0, 0, 0);
 					margin-left: 20px;
+					margin-bottom: 10px;
+					top: 10px;
     				li{
     					display: block !important;
     					border-right: none;
