--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -21,6 +21,10 @@ body{
 	font-size: 16px !important;//testing al finalizar quitar el important
 	color: @color-text-grey;
 }
+section{
+  display: block;
+  overflow: hidden;
+}
 
 input, select{
 	box-shadow: none !important;
@@ -763,7 +767,7 @@ a.more-link{
 }
 /*END HOME*/
 
-/*ESTILOS ARTICLES
+/*ARTICLES
 ****************************************************************/
 .node-type-article{
 	.panels-flexible-region-new-cover_image{
@@ -1737,6 +1741,7 @@ a.more-link{
     		margin-bottom: 15px;
     		h2{
 				margin-top: 5px;
+				line-height: 24px;
 	    		a{
 	    			font-size: .7em;
 	    			color: @color-text-grey;
