--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -101,6 +101,15 @@
 }
 /*END HEADER*/
 
+.breadcrum-container{
+	display: none;
+}
+
+.node-type-article{
+	.article-content-container {
+    	width: inherit;
+	}
+}
 
 
 }
